--- a/environment.yml
+++ b/environment.yml
@@ -1,17 +1,35 @@
-name: weathergen
+name: wxsbi
 channels:
   - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - asttokens=2.4.1=pyhd8ed1ab_0
+  - blosc=1.21.6=hef167b5_0
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
+  - brotli-python=1.1.0=py311hfdbb021_2
   - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2024.7.4=hbcca054_0
+  - c-ares=1.34.1=heb4867d_0
+  - ca-certificates=2024.8.30=hbcca054_0
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - cffi=1.17.1=py311hf29c0ef_0
+  - cftime=1.6.4=py311h9f3472d_1
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
+  - cycler=0.12.1=pyhd8ed1ab_0
   - debugpy=1.8.5=py311hf86e51f_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - exceptiongroup=1.2.2=pyhd8ed1ab_0
   - executing=2.0.1=pyhd8ed1ab_0
+  - freetype=2.12.1=h267a509_2
+  - h2=4.1.0=pyhd8ed1ab_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.4=nompi_h2d575fe_101
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
+  - idna=3.10=pyhd8ed1ab_0
   - importlib-metadata=8.2.0=pyha770c72_0
   - importlib_metadata=8.2.0=hd8ed1ab_0
   - ipykernel=6.29.5=pyh3099207_0
@@ -21,55 +39,110 @@ dependencies:
   - jupyter_client=8.6.2=pyhd8ed1ab_0
   - jupyter_core=5.7.2=py311h38be061_0
   - jupyterlab_widgets=3.0.11=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
+  - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.40=hf3520f5_7
+  - lerc=4.0.0=h27087fc_0
+  - libaec=1.1.3=h59595ed_0
+  - libblas=3.9.0=24_linux64_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_2
+  - libbrotlidec=1.1.0=hb9d3cd8_2
+  - libbrotlienc=1.1.0=hb9d3cd8_2
+  - libcblas=3.9.0=24_linux64_openblas
+  - libcurl=8.10.1=hbbe4b11_0
+  - libdeflate=1.22=hb9d3cd8_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=12.4.0=h77fa898_0
-  - libgomp=12.4.0=h77fa898_0
+  - libgcc=14.1.0=h77fa898_1
+  - libgcc-ng=14.1.0=h69a702a_1
+  - libgfortran=14.1.0=h69a702a_1
+  - libgfortran-ng=14.1.0=h69a702a_1
+  - libgfortran5=14.1.0=hc5f4f2c_1
+  - libgomp=14.1.0=h77fa898_1
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=24_linux64_openblas
+  - libnetcdf=4.9.2=nompi_h2564987_115
+  - libnghttp2=1.58.0=h47da74e_1
   - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.27=pthreads_hac2b453_1
+  - libpng=1.6.44=hadc24fc_0
   - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.46.0=hde9e2c9_0
-  - libstdcxx-ng=12.4.0=hc0a3c3a_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx=14.1.0=hc0a3c3a_1
+  - libstdcxx-ng=14.1.0=h4852527_1
+  - libtiff=4.7.0=he137b08_1
   - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxml2=2.12.7=he7c6b58_4
+  - libzip=1.11.1=hf83b1b0_0
   - libzlib=1.3.1=h4ab18f5_1
+  - lz4-c=1.9.4=hcb278e6_0
+  - matplotlib-base=3.9.2=py311h2b939e6_1
   - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.5=h59595ed_0
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openssl=3.0.14=h4ab18f5_0
+  - netcdf4=1.7.1=nompi_py311h7c29e4f_103
+  - openjpeg=2.5.2=h488ebb8_0
+  - openssl=3.3.2=hb9d3cd8_0
   - packaging=24.1=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_0
+  - patsy=0.5.6=pyhd8ed1ab_0
   - pexpect=4.9.0=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
+  - pillow=10.4.0=py311h4aec55e_1
   - pip=24.2=pyhd8ed1ab_0
   - platformdirs=4.2.2=pyhd8ed1ab_0
   - prompt-toolkit=3.0.47=pyha770c72_0
   - psutil=6.0.0=py311h331c9d8_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.3=pyhd8ed1ab_0
+  - pycparser=2.22=pyhd8ed1ab_0
   - pygments=2.18.0=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
   - python=3.11.0=he550d4f_1_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-tzdata=2024.2=pyhd8ed1ab_0
   - python_abi=3.11=4_cp311
+  - pytz=2024.1=pyhd8ed1ab_0
   - pyzmq=26.1.0=py311h759c1eb_0
+  - qhull=2020.2=h434a139_5
   - readline=8.2=h8228510_1
+  - requests=2.32.3=pyhd8ed1ab_0
+  - seaborn=0.13.2=hd8ed1ab_2
+  - seaborn-base=0.13.2=pyhd8ed1ab_2
   - setuptools=72.1.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.2.1=ha2e4443_0
   - stack_data=0.6.2=pyhd8ed1ab_0
+  - statsmodels=0.14.4=py311h9f3472d_0
   - tk=8.6.13=noxft_h4845f30_101
   - tornado=6.4.1=py311h331c9d8_0
   - traitlets=5.14.3=pyhd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
+  - urllib3=2.2.3=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.44.0=pyhd8ed1ab_0
   - widgetsnbextension=4.0.11=pyhd8ed1ab_0
+  - xorg-libxau=1.0.11=hb9d3cd8_1
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
   - xz=5.2.6=h166bdaf_0
   - zeromq=4.3.5=h59595ed_1
   - zipp=3.19.2=pyhd8ed1ab_0
+  - zlib=1.3.1=h4ab18f5_1
+  - zstandard=0.23.0=py311hbc35293_1
+  - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - absl-py==2.1.0
       - arviz==0.19.0
       - click==8.1.7
       - contourpy==1.2.1
-      - cycler==0.12.1
       - dm-tree==0.1.8
       - filelock==3.15.4
       - fonttools==4.53.1
@@ -77,9 +150,11 @@ dependencies:
       - grpcio==1.65.4
       - h5netcdf==1.3.0
       - h5py==3.11.0
-      - jax==0.4.31
+      - jax==0.4.34
+      - jax-cuda12-pjrt==0.4.34
+      - jax-cuda12-plugin==0.4.34
       - jax2torch==0.0.7
-      - jaxlib==0.4.31
+      - jaxlib==0.4.34
       - jinja2==3.1.4
       - joblib==1.4.2
       - kiwisolver==1.4.5
@@ -95,6 +170,7 @@ dependencies:
       - numpyro==0.15.2
       - nvidia-cublas-cu12==12.1.3.1
       - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvcc-cu12==12.6.77
       - nvidia-cuda-nvrtc-cu12==12.1.105
       - nvidia-cuda-runtime-cu12==12.1.105
       - nvidia-cudnn-cu12==9.1.0.70
@@ -107,13 +183,11 @@ dependencies:
       - nvidia-nvtx-cu12==12.1.105
       - opt-einsum==3.3.0
       - pandas==2.2.2
-      - pillow==10.4.0
       - protobuf==4.25.4
       - pyknos==0.15.2
       - pyparsing==3.1.2
       - pyro-api==0.1.2
       - pyro-ppl==1.9.1
-      - pytz==2024.1
       - sbi==0.22.0
       - scikit-learn==1.5.1
       - scipy==1.14.0
