--- a/environment.yml
+++ b/environment.yml
@@ -1,147 +1,420 @@
-name: weathergen
+name: wxsbi
 channels:
   - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - brotli-python=1.1.0=py311hfdbb021_2
-  - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2024.8.30=hbcca054_0
-  - certifi=2024.8.30=pyhd8ed1ab_0
-  - cffi=1.17.1=py311hf29c0ef_0
-  - charset-normalizer=3.4.0=pyhd8ed1ab_1
-  - comm=0.2.2=pyhd8ed1ab_0
-  - debugpy=1.8.5=py311hf86e51f_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_0
-  - executing=2.0.1=pyhd8ed1ab_0
-  - h2=4.1.0=pyhd8ed1ab_1
-  - hpack=4.0.0=pyhd8ed1ab_1
-  - hyperframe=6.0.1=pyhd8ed1ab_1
-  - idna=3.10=pyhd8ed1ab_1
-  - importlib-metadata=8.2.0=pyha770c72_0
-  - importlib_metadata=8.2.0=hd8ed1ab_0
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=8.26.0=pyh707e725_0
-  - ipywidgets=8.1.3=pyhd8ed1ab_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jupyter_client=8.6.2=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=py311h38be061_0
-  - jupyterlab_widgets=3.0.11=pyhd8ed1ab_0
-  - ld_impl_linux-64=2.40=hf3520f5_7
-  - libffi=3.4.2=h7f98852_5
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgomp=14.2.0=h77fa898_1
-  - libnsl=2.0.1=hd590300_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.46.0=hde9e2c9_0
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-ng=14.2.0=h4852527_1
-  - libuuid=2.38.1=h0b41bf4_0
-  - libzlib=1.3.1=h4ab18f5_1
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - ncurses=6.5=h59595ed_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openssl=3.4.0=hb9d3cd8_0
-  - packaging=24.1=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pip=24.2=pyhd8ed1ab_0
-  - platformdirs=4.2.2=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.47=pyha770c72_0
-  - psutil=6.0.0=py311h331c9d8_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
+  - _openmp_mutex=4.5=7_kmp_llvm
+  - _python_abi3_support=1.0=hd8ed1ab_2
+  - absl-py=2.3.1=pyhd8ed1ab_0
+  - adwaita-icon-theme=49.0=unix_0
+  - alsa-lib=1.2.14=hb9d3cd8_0
+  - anyio=4.11.0=pyhcf101f3_0
+  - argon2-cffi=25.1.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=25.1.0=py313h07c4f96_2
+  - arrow=1.4.0=pyhcf101f3_0
+  - arviz=0.22.0=pyhcf101f3_1
+  - asttokens=3.0.1=pyhd8ed1ab_0
+  - async-lru=2.0.5=pyh29332c3_0
+  - at-spi2-atk=2.38.0=h0630a04_3
+  - at-spi2-core=2.40.3=h0630a04_0
+  - atk-1.0=2.38.0=h04ea711_2
+  - attr=2.5.2=h39aace5_0
+  - attrs=25.4.0=pyh71513ae_0
+  - babel=2.17.0=pyhd8ed1ab_0
+  - beautifulsoup4=4.14.2=pyha770c72_0
+  - binutils_impl_linux-64=2.45=default_hfdba357_104
+  - binutils_linux-64=2.45=default_h4852527_104
+  - blas=2.137=mkl
+  - blas-devel=3.9.0=37_hcf00494_mkl
+  - bleach=6.3.0=pyhcf101f3_0
+  - bleach-with-css=6.3.0=h5f6438b_0
+  - blosc=1.21.6=he440d0b_1
+  - brotli=1.2.0=hed03a55_1
+  - brotli-bin=1.2.0=hb03c661_1
+  - brotli-python=1.2.0=py313hf159716_1
+  - bzip2=1.0.8=hda65f42_8
+  - c-ares=1.34.5=hb9d3cd8_0
+  - ca-certificates=2025.11.12=hbd8a1cb_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cachetools=6.2.2=pyhd8ed1ab_0
+  - cairo=1.18.4=h3394656_0
+  - certifi=2025.11.12=pyhd8ed1ab_0
+  - cffi=2.0.0=py313hf46b229_1
+  - cftime=1.6.4=py313h29aa505_2
+  - charset-normalizer=3.4.4=pyhd8ed1ab_0
+  - cloudpickle=3.1.2=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - comm=0.2.3=pyhe01879c_0
+  - cons=0.4.7=pyhd8ed1ab_2
+  - contourpy=1.3.3=py313h7037e92_3
+  - cpython=3.13.9=py313hd8ed1ab_101
+  - cuda-crt-tools=12.9.86=ha770c72_2
+  - cuda-cudart=12.9.79=h5888daf_0
+  - cuda-cudart_linux-64=12.9.79=h3f2d84a_0
+  - cuda-cuobjdump=12.9.82=hffce074_1
+  - cuda-cupti=12.9.79=h676940d_1
+  - cuda-nvcc-tools=12.9.86=he02047a_2
+  - cuda-nvdisasm=12.9.88=hffce074_1
+  - cuda-nvrtc=12.9.86=hecca717_1
+  - cuda-nvtx=12.9.79=hecca717_1
+  - cuda-nvvm-tools=12.9.86=h4bc722e_2
+  - cuda-version=12.9=h4f385c5_3
+  - cudnn=9.10.2.21=hbcb9cd8_0
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cyrus-sasl=2.1.28=hd9c7081_0
+  - dbus=1.16.2=h3c4dab8_0
+  - debugpy=1.8.17=py313h5d5ffb9_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - dill=0.4.0=pyhd8ed1ab_0
+  - double-conversion=3.3.1=h5888daf_0
+  - epoxy=1.5.10=hb03c661_2
+  - etuples=0.3.10=pyhd8ed1ab_1
+  - exceptiongroup=1.3.1=pyhd8ed1ab_0
+  - executing=2.2.1=pyhd8ed1ab_0
+  - filelock=3.20.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=hc364b38_1
+  - fonttools=4.60.1=py313h3dea7bd_0
+  - fqdn=1.5.1=pyhd8ed1ab_1
+  - freetype=2.14.1=ha770c72_0
+  - fribidi=1.0.16=hb03c661_0
+  - fsspec=2025.10.0=pyhd8ed1ab_0
+  - gcc=14.3.0=h6f77f03_12
+  - gcc_impl_linux-64=14.3.0=h0c81b82_12
+  - gcc_linux-64=14.3.0=h298d278_14
+  - gdk-pixbuf=2.44.4=h2b0a6b4_0
+  - glib-tools=2.86.2=hf516916_0
+  - gmp=6.3.0=hac33072_2
+  - gmpy2=2.2.1=py313h86d8783_2
+  - graphite2=1.3.14=hecca717_2
+  - graphviz=14.0.4=h87b6fe6_0
+  - grpcio=1.71.0=py313h751f5e6_1
+  - gtk3=3.24.43=h993cebd_6
+  - gts=0.7.6=h977cf35_4
+  - gxx=14.3.0=h76987e4_12
+  - gxx_impl_linux-64=14.3.0=h2185e75_12
+  - gxx_linux-64=14.3.0=hc876b51_14
+  - h11=0.16.0=pyhd8ed1ab_0
+  - h2=4.3.0=pyhcf101f3_0
+  - h5netcdf=1.7.3=pyhd8ed1ab_0
+  - h5py=3.15.1=nompi_py313h253c126_101
+  - harfbuzz=12.2.0=h15599e2_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.6=nompi_h6e4c0c1_103
+  - hicolor-icon-theme=0.17=ha770c72_2
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - httpcore=1.0.9=pyh29332c3_0
+  - httpx=0.28.1=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
+  - idna=3.11=pyhd8ed1ab_0
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - ipykernel=7.1.0=pyha191276_0
+  - ipython=8.21.0=pyh707e725_0
+  - ipython_genutils=0.2.0=pyhd8ed1ab_2
+  - ipywidgets=8.1.8=pyhd8ed1ab_0
+  - isoduration=20.11.0=pyhd8ed1ab_1
+  - jax=0.7.0=pyhd8ed1ab_0
+  - jaxlib=0.7.0=cpu_py313h9430eff_1
+  - jedi=0.19.2=pyhd8ed1ab_1
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - joblib=1.5.2=pyhd8ed1ab_0
+  - json5=0.12.1=pyhd8ed1ab_0
+  - jsonpointer=3.0.0=py313h78bf25f_2
+  - jsonschema=4.25.1=pyhe01879c_0
+  - jsonschema-specifications=2025.9.1=pyhcf101f3_0
+  - jsonschema-with-format-nongpl=4.25.1=he01879c_0
+  - jupyter=1.1.1=pyhd8ed1ab_1
+  - jupyter-lsp=2.3.0=pyhcf101f3_0
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_console=6.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.9.1=pyhc90fa1f_0
+  - jupyter_events=0.12.0=pyh29332c3_0
+  - jupyter_server=2.17.0=pyhcf101f3_0
+  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+  - jupyterlab=4.5.0=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
+  - jupyterlab_server=2.28.0=pyhcf101f3_0
+  - jupyterlab_widgets=3.0.16=pyhcf101f3_1
+  - kernel-headers_linux-64=3.10.0=he073ed8_18
+  - keyutils=1.6.3=hb9d3cd8_0
+  - kiwisolver=1.4.9=py313hc8edb43_2
+  - krb5=1.21.3=h659f571_0
+  - lark=1.3.1=pyhd8ed1ab_0
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.45=default_hbd61a6d_104
+  - lerc=4.0.0=h0aef613_1
+  - libabseil=20250127.1=cxx17_hbbce691_0
+  - libaec=1.1.4=h3f801dc_0
+  - libblas=3.9.0=37_h5875eb1_mkl
+  - libbrotlicommon=1.2.0=hb03c661_1
+  - libbrotlidec=1.2.0=hb03c661_1
+  - libbrotlienc=1.2.0=hb03c661_1
+  - libcap=2.77=h3ff7636_0
+  - libcblas=3.9.0=37_hfef963f_mkl
+  - libclang-cpp21.1=21.1.6=default_h99862b1_0
+  - libclang13=21.1.6=default_h746c552_0
+  - libcublas=12.9.1.4=h676940d_1
+  - libcudnn=9.10.2.21=hf7e9902_0
+  - libcudnn-dev=9.10.2.21=h58dd1b1_0
+  - libcudss=0.5.0.16=h14340ca_1
+  - libcufft=11.4.1.4=hecca717_1
+  - libcufile=1.14.1.1=hbc026e6_1
+  - libcups=2.3.3=hb8b1518_5
+  - libcurand=10.3.10.19=h676940d_1
+  - libcurl=8.17.0=h4e3cde8_0
+  - libcusolver=11.7.5.82=h676940d_2
+  - libcusparse=12.5.10.65=hecca717_2
+  - libdeflate=1.25=h17f619e_0
+  - libdrm=2.4.125=hb03c661_1
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libegl=1.7.0=ha4b6fd6_2
+  - libegl-devel=1.7.0=ha4b6fd6_2
+  - libev=4.33=hd590300_2
+  - libexpat=2.7.3=hecca717_0
+  - libffi=3.5.2=h9ec8514_0
+  - libfreetype=2.14.1=ha770c72_0
+  - libfreetype6=2.14.1=h73754d4_0
+  - libgcc=15.2.0=he0feb66_12
+  - libgcc-devel_linux-64=14.3.0=hf649bbc_112
+  - libgcc-ng=15.2.0=h69a702a_12
+  - libgd=2.3.3=h6f5c62b_11
+  - libgfortran=15.2.0=h69a702a_12
+  - libgfortran5=15.2.0=h68bc16d_12
+  - libgl=1.7.0=ha4b6fd6_2
+  - libgl-devel=1.7.0=ha4b6fd6_2
+  - libglib=2.86.2=h32235b2_0
+  - libglvnd=1.7.0=ha4b6fd6_2
+  - libglx=1.7.0=ha4b6fd6_2
+  - libglx-devel=1.7.0=ha4b6fd6_2
+  - libgomp=15.2.0=he0feb66_12
+  - libgrpc=1.71.0=h8e591d7_1
+  - libhwloc=2.12.1=default_h7f8ec31_1002
+  - libiconv=1.18=h3b78370_2
+  - libjpeg-turbo=3.1.2=hb03c661_0
+  - liblapack=3.9.0=37_h5e43f62_mkl
+  - liblapacke=3.9.0=37_hdba1596_mkl
+  - libllvm19=19.1.7=hf7376ad_2
+  - libllvm21=21.1.6=hf7376ad_0
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libmagma=2.9.0=ha7672b3_4
+  - libmpdec=4.0.0=hb9d3cd8_0
+  - libnetcdf=4.9.3=nompi_h11f7409_103
+  - libnghttp2=1.67.0=had1ee68_0
+  - libnl=3.11.0=hb9d3cd8_0
+  - libntlm=1.8=hb9d3cd8_0
+  - libnvjitlink=12.9.86=hecca717_2
+  - libopengl=1.7.0=ha4b6fd6_2
+  - libpciaccess=0.18=hb9d3cd8_0
+  - libpng=1.6.51=h421ea60_0
+  - libpq=18.1=h5c52fec_1
+  - libprotobuf=5.29.3=h7460b1f_2
+  - libre2-11=2025.06.26=hba17884_0
+  - librsvg=2.60.0=h61e6d4b_0
+  - libsanitizer=14.3.0=h8f1669f_12
+  - libsodium=1.0.20=h4ab18f5_0
+  - libsqlite=3.51.0=hee844dc_0
+  - libssh2=1.11.1=hcf80075_0
+  - libstdcxx=15.2.0=h934c35e_12
+  - libstdcxx-devel_linux-64=14.3.0=h9f08a49_112
+  - libstdcxx-ng=15.2.0=hdf11a46_12
+  - libsystemd0=257.10=hd0affe5_2
+  - libtiff=4.7.1=h9d88235_1
+  - libtorch=2.5.1=cuda126_mkl_h99b69db_317
+  - libudev1=257.10=hd0affe5_2
+  - libuuid=2.41.2=he9a06e4_0
+  - libuv=1.51.0=hb03c661_1
+  - libvulkan-loader=1.4.328.1=h5279c79_0
+  - libwebp-base=1.6.0=hd42ef1d_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.13.0=hca5e8e5_0
+  - libxml2=2.15.1=h26afc86_0
+  - libxml2-16=2.15.1=ha9997c6_0
+  - libxslt=1.1.43=h711ed8c_1
+  - libzip=1.11.2=h6991a6a_0
+  - libzlib=1.3.1=hb9d3cd8_2
+  - llvm-openmp=21.1.6=h4922eb0_0
+  - logical-unification=0.4.7=pyhd8ed1ab_0
+  - lz4-c=1.10.0=h5888daf_1
+  - markdown=3.10=pyhcf101f3_1
+  - markdown-it-py=4.0.0=pyhd8ed1ab_0
+  - markupsafe=3.0.3=py313h3dea7bd_0
+  - matplotlib=3.10.8=py313h78bf25f_0
+  - matplotlib-base=3.10.8=py313h683a580_0
+  - matplotlib-inline=0.2.1=pyhd8ed1ab_0
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - minikanren=1.0.5=pyhd8ed1ab_1
+  - mistune=3.1.4=pyhcf101f3_0
+  - mkl=2024.2.2=ha770c72_17
+  - mkl-devel=2024.2.2=ha770c72_17
+  - mkl-include=2024.2.2=ha770c72_17
+  - mkl-service=2.5.2=py313he761fc5_1
+  - ml_dtypes=0.5.4=np2py313h73dcb5b_0
+  - mpc=1.3.1=h24ddda3_1
+  - mpfr=4.2.1=h90cbb55_3
+  - mpmath=1.3.0=pyhd8ed1ab_1
+  - multipledispatch=0.6.0=pyhd8ed1ab_1
+  - munkres=1.1.4=pyhd8ed1ab_1
+  - nbclient=0.10.2=pyhd8ed1ab_0
+  - nbconvert=7.16.6=hc388f54_1
+  - nbconvert-core=7.16.6=pyhcf101f3_1
+  - nbconvert-pandoc=7.16.6=h7d6f222_1
+  - nbformat=5.10.4=pyhd8ed1ab_1
+  - nccl=2.28.9.1=h4d09622_0
+  - ncurses=6.5=h2d0b736_3
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - netcdf4=1.7.3=nompi_py313hfae5b86_100
+  - networkx=3.6=pyhcf101f3_0
+  - nflows=0.14=pyhd8ed1ab_0
+  - notebook=6.4.12=pyha770c72_0
+  - notebook-shim=0.2.4=pyhd8ed1ab_1
+  - numpy=2.3.5=py313hf6604e3_0
+  - numpyro=0.19.0=pyhd8ed1ab_0
+  - openjpeg=2.5.4=h55fea9a_0
+  - openldap=2.6.10=he970967_0
+  - openssl=3.6.0=h26f9b46_0
+  - opt_einsum=3.4.0=pyhd8ed1ab_1
+  - overrides=7.7.0=pyhd8ed1ab_1
+  - packaging=25.0=pyh29332c3_1
+  - pandas=2.3.3=py313h08cd8bf_1
+  - pandoc=3.8.2.1=ha770c72_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - pango=1.56.4=hadf4263_0
+  - parso=0.8.5=pyhcf101f3_0
+  - patsy=1.0.2=pyhcf101f3_0
+  - pcre2=10.46=h1321c63_0
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
+  - pillow=12.0.0=py313hfc0919a_1
+  - pip=25.3=pyh145f28c_0
+  - pixman=0.46.4=h54a6638_1
+  - platformdirs=4.5.0=pyhcf101f3_0
+  - prometheus_client=0.23.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.52=pyha770c72_0
+  - prompt_toolkit=3.0.52=hd8ed1ab_0
+  - protobuf=5.29.3=py313h386a9ef_0
+  - psutil=7.1.3=py313h54dd161_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pybind11=3.0.1=pyh7a1b43c_0
+  - pybind11-global=3.0.1=pyhc7ab6ef_0
   - pycparser=2.22=pyh29332c3_1
-  - pygments=2.18.0=pyhd8ed1ab_0
+  - pygments=2.19.2=pyhd8ed1ab_0
+  - pyknos=0.16.0=pyhd8ed1ab_0
+  - pymc=5.26.1=haba0287_1
+  - pymc-base=5.26.1=pyhcf101f3_1
+  - pyparsing=3.2.5=pyhcf101f3_0
+  - pyro-api=0.1.2=pyhd8ed1ab_0
+  - pyro-ppl=1.9.1=pyhd8ed1ab_1
+  - pyside6=6.9.3=py313h85046ba_1
   - pysocks=1.7.1=pyha55dd90_7
-  - python=3.11.0=he550d4f_1_cpython
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python_abi=3.11=4_cp311
-  - pyzmq=26.1.0=py311h759c1eb_0
-  - readline=8.2=h8228510_1
-  - requests=2.32.3=pyhd8ed1ab_1
-  - setuptools=72.1.0=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - tornado=6.4.1=py311h331c9d8_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
-  - urllib3=2.2.3=pyhd8ed1ab_1
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.44.0=pyhd8ed1ab_0
-  - widgetsnbextension=4.0.11=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
-  - zeromq=4.3.5=h59595ed_1
-  - zipp=3.19.2=pyhd8ed1ab_0
-  - zstandard=0.23.0=py311hbc35293_1
-  - zstd=1.5.6=ha6fb4c9_0
-  - pip:
-      - absl-py==2.1.0
-      - arviz==0.19.0
-      - click==8.1.7
-      - contourpy==1.2.1
-      - cycler==0.12.1
-      - dm-tree==0.1.8
-      - filelock==3.15.4
-      - fonttools==4.53.1
-      - fsspec==2024.6.1
-      - grpcio==1.65.4
-      - h5netcdf==1.3.0
-      - h5py==3.11.0
-      - jax==0.4.31
-      - jax2torch==0.0.7
-      - jaxlib==0.4.31
-      - jinja2==3.1.4
-      - joblib==1.4.2
-      - kiwisolver==1.4.5
-      - markdown==3.6
-      - markupsafe==2.1.5
-      - matplotlib==3.9.1.post1
-      - ml-dtypes==0.4.0
-      - mpmath==1.3.0
-      - multipledispatch==1.0.0
-      - networkx==3.3
-      - nflows==0.14
-      - numpy==2.0.1
-      - numpyro==0.15.2
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-cupti-cu12==12.1.105
-      - nvidia-cuda-nvrtc-cu12==12.1.105
-      - nvidia-cuda-runtime-cu12==12.1.105
-      - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.0.2.54
-      - nvidia-curand-cu12==10.3.2.106
-      - nvidia-cusolver-cu12==11.4.5.107
-      - nvidia-cusparse-cu12==12.1.0.106
-      - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.6.20
-      - nvidia-nvtx-cu12==12.1.105
-      - opt-einsum==3.3.0
-      - pandas==2.2.2
-      - pillow==10.4.0
-      - protobuf==4.25.4
-      - pyknos==0.15.2
-      - pyparsing==3.1.2
-      - pyro-api==0.1.2
-      - pyro-ppl==1.9.1
-      - pytz==2024.1
-      - sbi==0.22.0
-      - scikit-learn==1.5.1
-      - scipy==1.14.0
-      - sympy==1.13.1
-      - tensorboard==2.17.0
-      - tensorboard-data-server==0.7.2
-      - threadpoolctl==3.5.0
-      - torch==2.4.0
-      - tqdm==4.66.5
-      - triton==3.0.0
-      - tzdata==2024.1
-      - werkzeug==3.0.3
-      - xarray==2024.7.0
-      - xarray-einstats==0.7.0
-      - zuko==1.2.0
+  - pytensor=2.35.1=py313hd2d30e1_0
+  - pytensor-base=2.35.1=np2py313h73dcb5b_0
+  - python=3.13.9=hc97d973_101_cp313
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python-fastjsonschema=2.21.2=pyhe01879c_0
+  - python-gil=3.13.9=h4df99d1_101
+  - python-graphviz=0.21=pyhbacfb6d_0
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python_abi=3.13=8_cp313
+  - pytorch=2.5.1=cuda126_mkl_py313_he20fe19_317
+  - pytz=2025.2=pyhd8ed1ab_0
+  - pyyaml=6.0.3=py313h3dea7bd_0
+  - pyzmq=27.1.0=py312hfb55c3c_0
+  - qhull=2020.2=h434a139_5
+  - qt6-main=6.9.3=h5c1c036_1
+  - rdma-core=60.0=hecca717_0
+  - re2=2025.06.26=h9925aae_0
+  - readline=8.2=h8c095d6_2
+  - referencing=0.37.0=pyhcf101f3_0
+  - requests=2.32.5=pyhd8ed1ab_0
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_1
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - rfc3987-syntax=1.1.0=pyhe01879c_1
+  - rich=14.2.0=pyhcf101f3_0
+  - rpds-py=0.29.0=py313h843e2db_0
+  - sbi=0.25.0=pyhcf101f3_0
+  - scikit-learn=1.7.2=py313h06d4379_0
+  - scipy=1.16.3=py313h11c21cd_1
+  - seaborn=0.13.2=hd8ed1ab_3
+  - seaborn-base=0.13.2=pyhd8ed1ab_3
+  - send2trash=1.8.3=pyh0d859eb_1
+  - setuptools=75.8.2=pyhff2d567_0
+  - six=1.17.0=pyhe01879c_1
+  - sleef=3.9.0=ha0421bc_0
+  - snappy=1.2.2=h03e3b7b_1
+  - sniffio=1.3.1=pyhd8ed1ab_2
+  - soupsieve=2.8=pyhd8ed1ab_0
+  - stack_data=0.6.3=pyhd8ed1ab_1
+  - statsmodels=0.14.5=py313h29aa505_1
+  - sympy=1.14.0=pyh2585a3b_105
+  - sysroot_linux-64=2.17=h0157908_18
+  - tbb=2021.13.0=h8d10470_4
+  - tensorboard=2.20.0=pyhe01879c_0
+  - tensorboard-data-server=0.7.0=py313hafb0bba_3
+  - terminado=0.18.1=pyh0d859eb_0
+  - threadpoolctl=3.6.0=pyhecae5ae_0
+  - tinycss2=1.5.0=pyhcf101f3_0
+  - tk=8.6.13=noxft_ha0e22de_103
+  - tomli=2.3.0=pyhcf101f3_0
+  - toolz=1.1.0=pyhd8ed1ab_1
+  - tornado=6.5.2=py313h07c4f96_2
+  - tqdm=4.67.1=pyhd8ed1ab_1
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - triton=3.1.0=cuda126py313h4a10a2e_6
+  - typing-extensions=4.15.0=h396c80c_0
+  - typing_extensions=4.15.0=pyhcf101f3_0
+  - typing_utils=0.1.0=pyhd8ed1ab_1
+  - tzdata=2025b=h78e105d_0
+  - uri-template=1.3.0=pyhd8ed1ab_1
+  - urllib3=2.5.0=pyhd8ed1ab_0
+  - wayland=1.24.0=hd6090a7_1
+  - wcwidth=0.2.14=pyhd8ed1ab_0
+  - webcolors=25.10.0=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_3
+  - websocket-client=1.9.0=pyhd8ed1ab_0
+  - werkzeug=3.1.3=pyhd8ed1ab_1
+  - widgetsnbextension=4.0.15=pyhd8ed1ab_0
+  - xarray=2025.11.0=pyhcf101f3_0
+  - xarray-einstats=0.9.1=pyhd8ed1ab_0
+  - xcb-util=0.4.1=h4f16b4b_2
+  - xcb-util-cursor=0.1.6=hb03c661_0
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xkeyboard-config=2.46=hb03c661_0
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h4f16b4b_0
+  - xorg-libxau=1.0.12=hb03c661_1
+  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
+  - xorg-libxcursor=1.2.3=hb9d3cd8_0
+  - xorg-libxdamage=1.1.6=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb03c661_1
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxfixes=6.0.2=hb03c661_0
+  - xorg-libxi=1.8.2=hb9d3cd8_0
+  - xorg-libxinerama=1.1.5=h5888daf_1
+  - xorg-libxrandr=1.5.4=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
+  - xorg-libxtst=1.2.5=hb9d3cd8_3
+  - xorg-libxxf86vm=1.1.6=hb9d3cd8_0
+  - xorg-xorgproto=2024.1=hb9d3cd8_1
+  - yaml=0.2.5=h280c20c_3
+  - zeromq=4.3.5=h387f397_9
+  - zipp=3.23.0=pyhd8ed1ab_0
+  - zlib=1.3.1=hb9d3cd8_2
+  - zlib-ng=2.2.5=hde8ca8f_1
+  - zstandard=0.25.0=py313h54dd161_1
+  - zstd=1.5.7=hb8e6e7a_2
+  - zuko=1.5.0=pyhd8ed1ab_0
